--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
     >
       <img
         src="{{ user.photoUrl || './assets/user.png' }}"
-        alt="{{ user.username }}"
+        alt="{{ user.knownAs }}"
       />
       <a class="dropdown-toggle text-light ml-2" dropdownToggle
         >Welcome {{ user.username | titlecase }}</a
